--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -88,19 +88,19 @@
 
 \section{DL classiques}
 \begin{itemize}
-	\item $\sin x = x - \frac{x^3}{6} + \frac{x^5}{120} + \hdots + (-1)^n \frac{x^{2n+1}}{(2n+1)!} + o(x^{2n+1})$
-	\item $\cos x = 1 - \frac{x^2}{2} + \frac{x^4}{24} + \hdots + (-1)^n \frac{x^{2n}}{(2n)!} + o(x^{2n})$
-	\item $\sinh x = x + \frac{x^3}{6} + \frac{x^5}{120} + \hdots + \frac{x^{2n+1}}{(2n+1)!} + o(x^{2n+1})$
-	\item $\cosh x = 1 + \frac{x^2}{2} + \frac{x^4}{24} + \hdots + \frac{x^{2n}}{(2n)!} + o(x^{2n})$
-	\item $e^x = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \hdots + \frac{x^n}{n!} + o(x^n)$
-	\item $\ln(1+x) = x - \frac{x^2}{2} + \frac{x^3}{3} + \hdots + (-1)^{n-1} \frac{x^n}{n} + o(x^n)$
-	\item $(1+x)^{\alpha} = 1 + \alpha x + \frac{\alpha(\alpha -1)}{2} x^2 + \hdots + \frac{\alpha(\alpha-1)\hdots(\alpha-n+1)}{n!} x^n
+	\item [-] $\sin x = x - \frac{x^3}{6} + \frac{x^5}{120} + \hdots + (-1)^n \frac{x^{2n+1}}{(2n+1)!} + o(x^{2n+1})$
+	\item [-] $\cos x = 1 - \frac{x^2}{2} + \frac{x^4}{24} + \hdots + (-1)^n \frac{x^{2n}}{(2n)!} + o(x^{2n})$
+	\item [-] $\sinh x = x + \frac{x^3}{6} + \frac{x^5}{120} + \hdots + \frac{x^{2n+1}}{(2n+1)!} + o(x^{2n+1})$
+	\item [-] $\cosh x = 1 + \frac{x^2}{2} + \frac{x^4}{24} + \hdots + \frac{x^{2n}}{(2n)!} + o(x^{2n})$
+	\item [-] $e^x = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \hdots + \frac{x^n}{n!} + o(x^n)$
+	\item [-] $\ln(1+x) = x - \frac{x^2}{2} + \frac{x^3}{3} + \hdots + (-1)^{n-1} \frac{x^n}{n} + o(x^n)$
+	\item [-] $(1+x)^{\alpha} = 1 + \alpha x + \frac{\alpha(\alpha -1)}{2} x^2 + \hdots + \frac{\alpha(\alpha-1)\hdots(\alpha-n+1)}{n!} x^n
 		+ o(x^n)$
-	\item $\frac{1}{1-x} = 1 + x + \hdots + x^n + o(x^n)$
-	\item $\frac{1}{1+x} = 1 - x + x^2 + \hdots + (-1)^n x^n + o(x^n)$
-	\item $\tan x = x + \frac{x^3}{3} + \frac{2x^5}{15} + o(x^5)$
-	\item $\arcsin x = x + \frac{x^3}{6} + \frac{3x^5}{40} + o(x^5)$
-	\item $\arctan x = x - \frac{x^3}{3} + \frac{x^5}{5} + o(x^5)$
+	\item [-] $\frac{1}{1-x} = 1 + x + \hdots + x^n + o(x^n)$
+	\item [-] $\frac{1}{1+x} = 1 - x + x^2 + \hdots + (-1)^n x^n + o(x^n)$
+	\item [-] $\tan x = x + \frac{x^3}{3} + \frac{2x^5}{15} + o(x^5)$
+	\item [-] $\arcsin x = x + \frac{x^3}{6} + \frac{3x^5}{40} + o(x^5)$
+	\item [-] $\arctan x = x - \frac{x^3}{3} + \frac{x^5}{5} + o(x^5)$
 \end{itemize}
 
 
