--- a/Limites.tex
+++ b/Limites.tex
@@ -20,28 +20,26 @@
 	$\overline{\mathbb{R}} = \mathbb{R} \cup \{ +\infty, -\infty\}$
 \end{defi}
 
-\begin{prop} Intervalles de $\overline{\mathbb{R}}$ \\
-		Ce sont les parties de $\overline{\mathbb{R}}$ du type ($a,b \in \overline{\mathbb{R}}$ et $a \leq b$): $[a,b]$ ou $[a,b[$ ou $]a,b[$
-\end{prop}
-
-\begin{prop} Voisinages en $\overline{\mathbb{R}}$ \\
-	Soit $x \in \overline{\mathbb{R}}, A \subset \overline{\mathbb{R}}$. On dit que $A$ est voisinage de $x$ dans $\overline{\mathbb{R}}$ si:
-		\begin{itemize}
-			\item[-] si $x \in \mathbb{R},\ \exists \epsilon > 0$ tel que $[x - \epsilon, x + \epsilon] \subset A$
-			\item[-] si $x = +\infty,\ \exists M \in \mathbb{R}$ tel que $[M, +\infty] \subset A$
-			\item[-] si $x = - \infty,\ \exists M \in \mathbb{R}$ tel que $[-\infty, M] \subset A$
-		\end{itemize}
-\end{prop}
-
-\begin{prop} $\overline{\mathbb{R}}$ est s\'epar\'ee \\
-		Pour $x, y \in \overline{\mathbb{R}}$ avec $x \neq y$, il existe $U \in V_{\overline{\mathbb{R}}}(x), V \in V_{\overline{\mathbb{R}}}$
-		tel que: $U \cap V \neq \emptyset$
-\end{prop}
-
-\begin{prop} Limite d'une suite \\
-	Soit $(u_n)$ une suite r\'eelle et $l \in \overline{\mathbb{R}}$. On a: \\
-		$u_n \rightarrow l \Leftrightarrow \forall\ V \in V_{\overline{\mathbb{R}}}(l),\ \exists n_0 \in \mathbb{N}, \forall n \geq n_0, u_n
-		\in V$
+\begin{prop} $ $
+	\begin{itemize}
+		\item [-] Intervalles de $\overline{\mathbb{R}}$ \\
+			Ce sont les parties de $\overline{\mathbb{R}}$ du type ($a,b \in \overline{\mathbb{R}}$ et $a \leq b$): $[a,b]$ ou $[a,b[$ ou $]a,b[$
+		\item [-] Voisinages en $\overline{\mathbb{R}}$ \\
+			Soit $x \in \overline{\mathbb{R}}, A \subset \overline{\mathbb{R}}$. On dit que $A$ est voisinage de $x$ dans
+			$\overline{\mathbb{R}}$ si:
+				\begin{itemize}
+					\item[-] si $x \in \mathbb{R},\ \exists \epsilon > 0$ tel que $[x - \epsilon, x + \epsilon] \subset A$
+					\item[-] si $x = +\infty,\ \exists M \in \mathbb{R}$ tel que $[M, +\infty] \subset A$
+					\item[-] si $x = - \infty,\ \exists M \in \mathbb{R}$ tel que $[-\infty, M] \subset A$
+				\end{itemize}
+		\item [-]  $\overline{\mathbb{R}}$ est s\'epar\'ee \\
+			Pour $x, y \in \overline{\mathbb{R}}$ avec $x \neq y$, il existe $U \in V_{\overline{\mathbb{R}}}(x), V \in V_{\overline{\mathbb{R}}}$
+			tel que: $U \cap V \neq \emptyset$
+		\item [-] Limite d'une suite \\
+			Soit $(u_n)$ une suite r\'eelle et $l \in \overline{\mathbb{R}}$. On a: \\
+			$u_n \rightarrow l \Leftrightarrow \forall\ V \in V_{\overline{\mathbb{R}}}(l),\ \exists n_0 \in \mathbb{N}, \forall n
+			\geq n_0, u_n \in V$
+	\end{itemize}
 \end{prop}
 
 \begin{defi} Point adh\'erent \\
