--- a/Suites réelles.tex
+++ b/Suites réelles.tex
@@ -85,10 +85,10 @@
 				%\item si $u$ n'est pas minor\'ee alors $u \rightarrow -\infty$
 			%\end{enumerate}
 		\item Suites adjacentes:
-			\begin{itemize}
-				\item [-] D\'efinition: deux suites r\'eelles sont adjacentes si elles sont de monotonie contraire et si $u-v$ converge vers 0.
-				\item [-] Deux suites adjacentes convergent vers un m\^eme r\'eel
-			\end{itemize}
+			\begin{enumerate}
+				\item D\'efinition: deux suites r\'eelles sont adjacentes si elles sont de monotonie contraire et si $u-v$ converge vers 0.
+				\item Deux suites adjacentes convergent vers un m\^eme r\'eel
+			\end{enumerate}
 	\end{enumerate}
 \end{prop}
 \begin{theo} Segments embo\^it\'es \\
