--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -36,7 +36,7 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 
 \section{Ouverts et ferm\'es}
 \begin{defi}
-	Soit $A \subset \mathbb{R}$
+	Soit $A \subset \mathbb{R}$,
 	\begin{itemize}
 		\item [-] On dit que $A$ est un ouvert si:
 			\[\forall x, x \in A \Rightarrow A \in V_\mathbb{R}(x)\]
@@ -66,7 +66,7 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 	\begin{itemize}
 		\item [-] Adh\`erence, int\'erieur d'intervalles: \\
 		\begin{tabular}{@{}ll@{}}
-				$Int([a,b])$ & $\quad Adh(]a,b[)$ \\
+				$\quad Int([a,b])$ & $\quad \quad Adh(]a,b[)$ \\
 				$\quad = Int(]a,b])$ & $\quad \quad = Adh(]a,b])$ \\
 				$\quad = Int([a,b[)$ & $\quad \quad = Adh([a,b[)$ \\
 				$\quad = Int(]a,b[) = ]a,b[$ & $\quad \quad = Adh([a,b]) = [a,b]$ \\
