--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -24,21 +24,21 @@
 
 \begin{prop} $ $
 	\begin{itemize}
-		\item $\cosh$ est paire, $\sinh$ est impaire, $\tanh$ est impaire
-		\item $ \cosh^2 t - \sinh^2 t = 1 $
-		\item $\cosh$ et $\sinh$ sont d\'{e}rivables sur $\mathbb{R}$: \\
+		\item [-] $\cosh$ est paire, $\sinh$ est impaire, $\tanh$ est impaire
+		\item [-] $ \cosh^2 t - \sinh^2 t = 1 $
+		\item [-] $\cosh$ et $\sinh$ sont d\'{e}rivables sur $\mathbb{R}$: \\
 			$\cosh'$ $ = \sinh$ \\
 			$\sinh'$ $ = \cosh$
 	\end{itemize}
 \end{prop}
 \begin{prop} Formules
 	\begin{itemize}
-			\item $\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$
-			\item $\sinh (a+b) = \sinh a\cosh b + \sinh b\cosh a$
-			\item $\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$
-			\item $\sinh (a-b) = \sinh a\cosh b - \sinh b\cosh a$
-			\item $\cosh^2 a = \frac{\cosh 2a + 1}{2}$
-			\item $\sinh^2 a = \frac{\cosh 2a - 1}{2}$
+			\item [-] $\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$
+			\item [-] $\sinh (a+b) = \sinh a\cosh b + \sinh b\cosh a$
+			\item [-] $\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$
+			\item [-] $\sinh (a-b) = \sinh a\cosh b - \sinh b\cosh a$
+			\item [-] $\cosh^2 a = \frac{\cosh 2a + 1}{2}$
+			\item [-] $\sinh^2 a = \frac{\cosh 2a - 1}{2}$
 	\end{itemize}
 \end{prop}
 
@@ -60,18 +60,18 @@
 
 \begin{prop} Formules
 	\begin{itemize}
-		\item $\cos(\arcsin x) = \sin(\arccos x) = \sqrt{1 - x^2}$
-		\item $\cos (a+b) = \cos a\cos b - \sin a\sin b$
-		\item $\cos (a-b) = \cos a\cos b + \sin a\sin b$
-		\item $\sin (a+b) = \sin a\cos b + \sin b\cos a$
-		\item $\sin (a-b) = \sin a\cos b - \sin b\cos a$
-		\item $\cos^2 a = \frac{1}{1 + \tan^2a} = \frac{1 + \cos 2a}{2}$
-		\item $\sin^2 a = \frac{1 - \cos 2a}{2}$
+		\item [-] $\cos(\arcsin x) = \sin(\arccos x) = \sqrt{1 - x^2}$
+		\item [-] $\cos (a+b) = \cos a\cos b - \sin a\sin b$
+		\item [-] $\cos (a-b) = \cos a\cos b + \sin a\sin b$
+		\item [-] $\sin (a+b) = \sin a\cos b + \sin b\cos a$
+		\item [-] $\sin (a-b) = \sin a\cos b - \sin b\cos a$
+		\item [-] $\cos^2 a = \frac{1}{1 + \tan^2a} = \frac{1 + \cos 2a}{2}$
+		\item [-] $\sin^2 a = \frac{1 - \cos 2a}{2}$
 		\newline
-		\item $\cos p + \cos q = 2\cos\frac{p+q}{2}\cos\frac{p-q}{2}$
-		\item $\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$
-		\item $\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$
-		\item $\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$
+		\item [-] $\cos p + \cos q = 2\cos\frac{p+q}{2}\cos\frac{p-q}{2}$
+		\item [-] $\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$
+		\item [-] $\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$
+		\item [-] $\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$
 	\end{itemize}
 \end{prop}
 
@@ -94,12 +94,12 @@
 
 \begin{prop} Formules
 	\begin{itemize}
-		\item $\tan (\Pi-t) = -\tan t$
-		\item $\tan (\frac{\Pi}{2} - t) = \frac{1}{\tan t}$
+		\item [-] $\tan (\Pi-t) = -\tan t$
+		\item [-] $\tan (\frac{\Pi}{2} - t) = \frac{1}{\tan t}$
 		\newline
-		\item $\tan' t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$
-		\item $\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$
-		\item $\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$
+		\item [-] $\tan' t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$
+		\item [-] $\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$
+		\item [-] $\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$
 	\end{itemize}
 \end{prop}
 
@@ -132,13 +132,12 @@ Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
 Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
 
 \section{Astuces}
-\begin{prop} Soient $a,b \in \mathbb{R}$ tels que $a^2 + b^2 = 1$\\
-	Alors il existe $\theta \in \mathbb{R}$ tel que $a = \cos \theta$ et $b = \sin \theta$
-\end{prop}
-
-\begin{prop} Aplitude/phase \\
-	Soient $\lambda, \mu \in \mathbb{R}$, il existe $A \geq 0,\ \varphi \in \mathbb{R}$ tels que:
-	\[\forall t \in \mathbb{R},\ \lambda \cos t + \mu \sin t = A\cos(t - \varphi)\]
-\end{prop}
+\begin{enumerate}
+	\item Soient $a,b \in \mathbb{R}$ tels que $a^2 + b^2 = 1$\\
+		Alors il existe $\theta \in \mathbb{R}$ tel que $a = \cos \theta$ et $b = \sin \theta$
+	\item Aplitude/phase \\
+		Soient $\lambda, \mu \in \mathbb{R}$, il existe $A \geq 0,\ \varphi \in \mathbb{R}$ tels que:
+		\[\forall t \in \mathbb{R},\ \lambda \cos t + \mu \sin t = A\cos(t - \varphi)\]
+\end{enumerate}
 
 \end{document}
