--- a/Équivalents.tex
+++ b/Équivalents.tex
@@ -56,13 +56,13 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 
 \section{Faits de base}
 \begin{itemize}
-	\item $f_1(x) = o(g(x))$\\
+	\item [-] $f_1(x) = o(g(x))$\\
 		$f_2(x)	= o(g(x))$ \\
 		Alors $\forall \alpha \in \mathbb{R}, \alpha f_1(x) + f_2(x) =  o(g(x))$
-	\item $f(x) \sim g(x) \Leftrightarrow f(x) - g(x) = o(g(x))$
-	\item $f(x) = o(g(x)) \Rightarrow f(x) + g(x) \sim g(x)$
-	\item l'\'equivalence est r\'eflexive, sym\'etrique et transitive
-	\item $f_1(x) \sim g_1(x)$\\
+	\item [-] $f(x) \sim g(x) \Leftrightarrow f(x) - g(x) = o(g(x))$
+	\item [-] $f(x) = o(g(x)) \Rightarrow f(x) + g(x) \sim g(x)$
+	\item [-] l'\'equivalence est r\'eflexive, sym\'etrique et transitive
+	\item [-] $f_1(x) \sim g_1(x)$\\
 		$f_2(x) \sim g_2(x)$\\
 		Alors, $f_1(x)f_2(x) \sim g_1(x)g_2(x)$ \\et si $f_2(x), g_2(x) \neq 0$ au voisinage de a, $\frac{f_1(x)}{f_2(x)} \sim
 		\frac{g_1(x)}{g_2(x)}$
