--- a/Continuité.tex
+++ b/Continuité.tex
@@ -76,4 +76,10 @@
 	Soit $I$ un intervalle non trivial de $\mathbb{R}, f:I \rightarrow \mathbb{R}$ continue et injective, alors $f$ est strictement monotone
 \end{theo}
 
+\section{Remarques}
+\begin{enumerate}
+	\item En g\'en\'eral, les ferm\'es born\'es sont toujours des segments
+\end{enumerate}
+
+
 \end{document}
