--- a/Dénombrement.tex
+++ b/Dénombrement.tex
@@ -97,10 +97,10 @@
 		\[|S(E)| = n!\]
 \end{enumerate}
 
-\section{Astuces}
-\begin{itemize}
-	\item [-] Utiliser des ensembles compl\'ementaires
-	\item [-] D\'ecomposer en ensembles \`a $k$ \'el\'ements avec $\binom{n}{k}$ puis faire une somme pour revenir au premier ensemble
-\end{itemize}
+\section{Remarques}
+\begin{enumerate}
+	\item Utiliser des ensembles compl\'ementaires
+	\item D\'ecomposer en ensembles \`a $k$ \'el\'ements avec $\binom{n}{k}$ puis faire une somme pour revenir au premier ensemble
+\end{enumerate}
 
 \end{document}
