--- a/Dérivées.tex
+++ b/Dérivées.tex
@@ -131,7 +131,7 @@
 	Alors $g \circ f \in D^n(I, \mathbb{R})$
 \end{theo}
 
-\begin{theo} R\'ecriproque\\
+\begin{theo} R\'eciproque\\
 	Soit I un intervalle de $\mathbb{R}$, $f$ une application admettant une r\'eciproque g et telle que $f \in D^n$. Alors $g \in D^n$
 \end{theo}
 
@@ -160,6 +160,10 @@
 \begin{theo} Formule de Taylor-Young\\
 	Soit I un intervalle de $\mathbb{R},\ x_0 \in I, f:I\rightarrow \mathbb{R}$ de classe $C^n$. Alors:
 	\[f(x) - T_{n,f,x_0}(x) \underset{x \rightarrow x_0}{=} o((x-x_0)^n)\]
+
+	\begin{rqs}
+		On peut utiliser ce th\'eor\`eme pour prouver qu'une fonction admet un DL
+	\end{rqs}
 \end{theo}
 
 \end{document}
