--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -103,5 +103,10 @@
 	\item [-] $\arctan x = x - \frac{x^3}{3} + \frac{x^5}{5} + o(x^5)$
 \end{itemize}
 
+\section{Remarques}
+\begin{enumerate}
+	\item On peut se ramener \`a un DL en $0$ en additionant l'odre demand\'e. \\
+	Si on demande DL en 1 de $f$ telle que $f(x) = \cos(x)$, on cherche DL(0) de $x \mapsto \cos(x+1)$
+\end{enumerate}
 
 \end{document}
