--- a/Entiers naturels.tex
+++ b/Entiers naturels.tex
@@ -27,7 +27,7 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 	\item $\mathbb{N}$ n'est pas major\'ee
 \end{enumerate}
 
-\section{r\'ecurrence}
+\section{r\'ecurrences}
 \begin{enumerate}
 	\item r\'ecurrence simple:
 		\begin{enumerate}
