--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -20,8 +20,8 @@
 \maketitle
 
 \section{Voisinages}
-\begin{defi}
-	Soit $x$ un r\'eel et $A \subset \mathbb{R}$. On dit que $A$ est voisinage de $x$ s'il existe $\epsilon > 0$ tel que:
+\begin{defi} Voisinage \\
+	Soit $x$ un r\'eel et $A \subset \mathbb{R}$. $A$ est voisinage de $x$ s'il existe $\epsilon > 0$ tel que:
 	\[[x-\epsilon, x+\epsilon] \subset A\]
 \end{defi}
 Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $x$ dans $\mathbb{R}$
@@ -37,11 +37,11 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 \section{Ouverts et ferm\'es}
 \begin{defi}
 	Soit $A \subset \mathbb{R}$,
-	\begin{itemize}
-		\item [-] On dit que $A$ est un ouvert si:
+	\begin{enumerate}
+		\item On dit que $A$ est un ouvert si:
 			\[\forall x, x \in A \Rightarrow A \in V_\mathbb{R}(x)\]
-		\item [-] On dit que $A$ est un ferm\'e lorsque $A^c$ est un ouvert
-	\end{itemize}
+		\item On dit que $A$ est un ferm\'e lorsque $A^c$ est un ouvert
+	\end{enumerate}
 \end{defi}
 
 \begin{prop} $ $
