--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -131,7 +131,7 @@ Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
 \(\arctan\) est impaire continue et strictement croissante \\
 Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
 
-\section{Astuces}
+\section{Remarques}
 \begin{enumerate}
 	\item Soient $a,b \in \mathbb{R}$ tels que $a^2 + b^2 = 1$\\
 		Alors il existe $\theta \in \mathbb{R}$ tel que $a = \cos \theta$ et $b = \sin \theta$
